# redis-agent-memory-demo

./: .gitignore  Dockerfile  Dockerfile.grpc  Makefile  README.md  docker-compose.yaml  index.yaml  pyproject.toml
charts/agent-memory-demo/: Chart.yaml  values.yaml
charts/agent-memory-demo/templates/: admin-auth-external-secret.yaml  admin-auth-secret.yaml  ams-url-secret.yaml  configmap.yaml  deployment.yaml  ingress.yaml  openai-api-external-secret.yaml  openai-api-secret.yaml  password-external-secret.yaml  password-secret.yaml  proxy-basic-auth-external-secret.yaml  proxy-basic-auth-secret.yaml  pvc.yaml  reaadb-secret.yaml  reaadb.yaml  redb.yaml  redis-service.yaml  redis-url-external-secret.yaml  redis-url-secret.yaml  service.yaml  tavily-api-external-secret.yaml  tavily-api-secret.yaml  tls-cert-secret.yaml
charts/agent-memory-server/: Chart.yaml  values.yaml
charts/agent-memory-server/templates/: deployment.yaml  openai-api-external-secret.yaml  openai-api-secret.yaml  redis-url-external-secret.yaml  redis-url-secret.yaml  service.yaml
src/memory_demo/: __init__.py  chat_service_pb2.py  chat_service_pb2_grpc.py  driver.py  grpc_chat.py  memory_demo.py  memory_exercise.py
web/: .dockerignore  Dockerfile  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/app/app/: layout.tsx  (+1 more)
web/components/: app-shell-status.tsx  app-shell.tsx  logout-form.tsx
web/lib/: auth.ts  env.ts  grpc-chat.ts  password.ts  public-origin.ts  redis.ts  types.ts  utils.ts
web/protos/: chat_service.proto
(+21 files in other folders)
